Add deserialization support for rAIPawnOrder/PAO.